try to fix bug when drawing 2 users - (lines collapse) WIP

--- a/src/components/Drawing/Drawing.scss
+++ b/src/components/Drawing/Drawing.scss
@@ -1,4 +1,11 @@
+.canvases-container {
+  position: relative;
+}
+
 .drawing-canvas {
   width: 100vw;
   height: 100vh;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
